# CryptoTest

./: .gitignore  README.md  main.py  pre-commit  pyproject.toml  trade_records.json
.github/workflows/: python_ci.yaml
