[project]
name = "cryptotest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "base58>=2.1.1",
    "colorlog>=6.9.0",
    "crab-dbg>=0.1.0",
    "pybit>=5.9.0",
    "pyyaml>=6.0.2",
    "solana>=0.36.5",
    "solders>=0.25.0",
]
